<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/configuraci_n_incial_2" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_configuraci_n_incial_2_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__configuraci_n_incial_2_ek2"
					android:background="@drawable/_bg__configuraci_n_incial_2_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />

				<ImageView android:id="@+id/left_3"
					android:src="@drawable/left_3"
					android:contentDescription="left_2"
					 android:layout_marginStart="17dp"
					android:layout_marginTop="30dp"
					android:layout_width="40dp"
					android:layout_height="40dp" />

				<TextView android:id="@+id/what_is_your_height"
					android:textStyle="bold|italic"
					android:textSize="24sp"
					android:textColor="@color/what_is_your_height_color"
					android:layout_marginLeft="78dp"
					android:layout_marginTop="114dp"
					android:layout_width="232dp"
					android:layout_height="45dp"
					android:text="@string/what_is_your_height_string"
					 />

				<TextView android:id="@+id/what_is_your_weight"
					android:textStyle="bold|italic"
					android:textSize="24sp"
					android:textColor="@color/what_is_your_height_color"
					android:layout_marginLeft="78dp"
					android:layout_marginTop="276dp"
					android:layout_width="236dp"
					android:layout_height="45dp"
					android:text="@string/what_is_your_weight_string"
					 />

				<TextView android:id="@+id/what_is_your_target_weight"
					android:textStyle="bold|italic"
					android:textSize="24sp"
					android:textColor="@color/what_is_your_height_color"
					android:layout_marginLeft="42dp"
					android:layout_marginTop="438dp"
					android:layout_width="305dp"
					android:layout_height="45dp"
					android:text="@string/what_is_your_target_weight_string"
					 />

				<ImageView android:id="@+id/rectangle_9"
					android:src="@drawable/rectangle_9"
					android:contentDescription="rectangle_9"
					 android:layout_marginStart="55dp"
					android:layout_marginTop="508dp"
					android:layout_width="250dp"
					android:layout_height="50dp" />

				<View   android:id="@+id/rectangle_10"
					android:background="@drawable/rectangle_10_shape"
					 android:alpha="0.15000000596046"
					 android:layout_marginStart="57dp"
					android:layout_marginTop="346dp"
					android:layout_width="252dp"
					android:layout_height="52dp" />

				<ImageView android:id="@+id/rectangle_11"
					android:src="@drawable/rectangle_11"
					android:contentDescription="rectangle_11"
					 android:layout_marginStart="57dp"
					android:layout_marginTop="184dp"
					android:layout_width="250dp"
					android:layout_height="50dp" />


				<EditText
					android:id="@+id/txt_altura"
					android:layout_width="200dp"
					android:layout_height="60dp"
					android:layout_marginLeft="80dp"
					android:layout_marginTop="180dp"
					android:alpha="0.7"
					android:text="@string/_170_string"
					android:textColor="@color/what_is_your_height_color"
					android:textSize="24sp"
					android:textStyle="bold|italic" />

				<RelativeLayout android:id="@+id/btn_siguiente2"
					android:layout_marginTop="652dp"
					android:layout_marginStart="90dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<View   android:id="@+id/rectangle_12"
						android:background="@drawable/rectangle_12_shape"
						 android:alpha="0.80000001192093"
						 android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:layout_width="180dp"
						android:layout_height="60dp" />

					<TextView android:id="@+id/siguiente"
						android:textStyle="bold|italic"
						android:textSize="24sp"
						android:textColor="@color/_bg__configuraci_n_incial_2_ek2_color"
						android:layout_marginLeft="40dp"
						android:layout_marginTop="16dp"
						android:layout_width="129dp"
						android:layout_height="45dp"
						android:text="@string/siguiente_string"
						 />

				</RelativeLayout>

				<EditText android:id="@+id/txt_peso_a"
					android:textStyle="bold|italic"
					android:textSize="24sp"
					android:textColor="@color/what_is_your_height_color"
					android:layout_marginLeft="80dp"
					android:layout_marginTop="345dp"
					android:layout_width="190dp"
					android:layout_height="50dp"
					android:text="@string/_70_string"
					 />

				<EditText android:id="@+id/txt_peso_m"
					android:textStyle="bold|italic"
					android:textSize="24sp"
					android:textColor="@color/what_is_your_height_color"
					android:layout_marginLeft="80dp"
					android:layout_marginTop="515dp"
					android:layout_width="200dp"
					android:layout_height="50dp"
					android:text="@string/_65_string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>