<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/registro" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >


			<TextView android:id="@+id/all_ready__"
				android:textStyle="bold|italic"
				android:textSize="36sp"
				android:textColor="@color/all_ready___color"
				android:layout_marginLeft="75dp"
				android:layout_marginTop="95dp"
				android:layout_width="240dp"
				android:layout_height="67dp"
				android:text="@string/all_ready___string"
				 />

			<ImageView android:id="@+id/left_4"
				android:src="@drawable/left_4"
				android:contentDescription="left_4"
				 android:layout_marginStart="17dp"
				android:layout_marginTop="30dp"
				android:layout_width="40dp"
				android:layout_height="40dp" />

			<View   android:id="@+id/rectangle_13"
				android:background="@drawable/rectangle_13_shape"
				 android:alpha="0.15000000596046"
				 android:layout_marginStart="57dp"
				android:layout_marginTop="232dp"
				android:layout_width="250dp"
				android:layout_height="50dp"
				/>

			<View   android:id="@+id/rectangle_14"
				android:background="@drawable/rectangle_14_shape"
				 android:alpha="0.15000000596046"
				 android:layout_marginStart="58dp"
				android:layout_marginTop="359dp"
				android:layout_width="250dp"
				android:layout_height="50dp" />

			<TextView android:id="@+id/your_email"
				android:textStyle="bold|italic"
				android:textSize="24sp"
				android:textColor="@color/all_ready___color"
				android:layout_marginLeft="58dp"
				android:layout_marginTop="179dp"
				android:layout_width="140dp"
				android:layout_height="45dp"
				android:text="@string/your_email_string"
				 />

			<TextView android:id="@+id/your_name"
				android:textStyle="bold|italic"
				android:textSize="24sp"
				android:textColor="@color/all_ready___color"
				android:layout_marginLeft="57dp"
				android:layout_marginTop="307dp"
				android:layout_width="140dp"
				android:layout_height="45dp"
				android:text="@string/your_name_string"
				 />

			<TextView android:id="@+id/your_password"
				android:textStyle="bold|italic"
				android:textSize="24sp"
				android:textColor="@color/all_ready___color"
				android:layout_marginLeft="60dp"
				android:layout_marginTop="434dp"
				android:layout_width="189dp"
				android:layout_height="45dp"
				android:text="@string/your_password_string"
				 />

			<TextView android:id="@+id/repeat_password"
				android:textStyle="bold|italic"
				android:textSize="24sp"
				android:textColor="@color/all_ready___color"
				android:layout_marginLeft="60dp"
				android:layout_marginTop="561dp"
				android:layout_width="204dp"
				android:layout_height="45dp"
				android:text="@string/repeat_password_string"
				 />

			<View   android:id="@+id/rectangle_15"
				android:background="@drawable/rectangle_15_shape"
				 android:alpha="0.15000000596046"
				 android:layout_marginStart="57dp"
				android:layout_marginTop="486dp"
				android:layout_width="250dp"
				android:layout_height="50dp" />

			<View   android:id="@+id/rectangle_16"
				android:background="@drawable/rectangle_16_shape"
				 android:alpha="0.15000000596046"
				 android:layout_marginStart="57dp"
				android:layout_marginTop="613dp"
				android:layout_width="250dp"
				android:layout_height="50dp" />


			<RelativeLayout android:id="@+id/btn_registro"
				android:layout_marginTop="688dp"
				android:layout_marginStart="90dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/rectangle_17"
					android:background="@drawable/rectangle_17_shape"
					 android:alpha="0.80000001192093"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="180dp"
					android:layout_height="60dp" />

				<TextView android:id="@+id/sign_up"
					android:textStyle="bold|italic"
					android:textSize="24sp"
					android:textColor="@color/sign_up_color"
					android:layout_marginLeft="51dp"
					android:layout_marginTop="16dp"
					android:layout_width="109dp"
					android:layout_height="45dp"
					android:text="@string/sign_up_string"
					 />

			</RelativeLayout>
			<EditText
				android:id="@+id/txt_email"
				android:layout_marginStart="57dp"
				android:layout_marginTop="232dp"
				android:layout_width="250dp"
				android:layout_height="50dp"
				android:ems="10"
				android:inputType="textEmailAddress"
				android:importantForAccessibility="no"
				/>

			<EditText
				android:id="@+id/txt_pwd_i"
				android:layout_width="250dp"
				android:layout_height="50dp"
				android:layout_marginStart="57dp"
				android:layout_marginTop="486dp"
				android:ems="10"
				android:inputType="textPassword"
				android:importantForAccessibility="no"
				/>

			<EditText
				android:id="@+id/txt_pwd_v"
				android:layout_width="250dp"
				android:layout_height="50dp"
				android:layout_marginStart="57dp"
				android:layout_marginTop="613dp"
				android:ems="10"
				android:inputType="textPassword"
				android:importantForAccessibility="no"/>

			<EditText
				android:id="@+id/txt_nombre"
				android:layout_marginStart="58dp"
				android:layout_marginTop="359dp"
				android:layout_width="250dp"
				android:layout_height="50dp"
				android:ems="10"
				android:inputType="textPersonName"
				android:importantForAccessibility="no"
				/>

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>