<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >

	<ScrollView android:id="@+id/outcomming2" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="0dp"
			android:layout_marginTop="0dp">


			<RelativeLayout
				android:id="@+id/page_outcomming2_ek1"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginStart="0dp"
				android:layout_marginTop="0dp">


				<View
					android:id="@+id/_bg__outcomming2_ek2"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:background="@drawable/_bg__outcomming2_ek2_shape" />

				<RelativeLayout
					android:id="@+id/btn_login"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="150dp"
					android:layout_marginTop="650dp">

					<View
						android:id="@+id/rectangle_1"
						android:layout_width="126dp"
						android:layout_height="37dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/rectangle_1_shape" />

					<TextView
						android:id="@+id/sign_in"
						android:layout_width="86dp"
						android:layout_height="37dp"
						android:layout_marginLeft="32dp"
						android:layout_marginTop="7dp"
						android:text="@string/sign_in_string"
						android:textColor="@color/_bg__outcomming2_ek2_color"
						android:textSize="20sp"
						android:textStyle="bold|italic" />

				</RelativeLayout>


				<ImageView
					android:id="@+id/_3945191_1"
					android:layout_width="411dp"
					android:layout_height="360dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="100dp"
					android:contentDescription="_3945191_1"
					android:src="@drawable/_3945191_1" />

				<TextView
					android:id="@+id/live_healthy_and_great_"
					android:layout_width="274dp"
					android:layout_height="45dp"
					android:layout_marginLeft="80dp"
					android:layout_marginTop="50dp"
					android:text="@string/live_healthy_and_great__string"
					android:textColor="@color/rectangle_1_color"
					android:textSize="24sp"
					android:textStyle="bold|italic" />

				<RelativeLayout
					android:id="@+id/btn_start"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="160dp"
					android:layout_marginTop="510dp">

					<View
						android:id="@+id/ellipse_1"
						android:layout_width="104dp"
						android:layout_height="104dp"
						android:layout_marginStart="0dp"
						android:layout_marginTop="0dp"
						android:alpha="0"
						android:background="@drawable/ellipse_1_shape" />

					<View
						android:id="@+id/ellipse_2"
						android:layout_width="90dp"
						android:layout_height="90dp"
						android:layout_marginStart="5dp"
						android:layout_marginTop="-10dp"
						android:alpha="0.80000001192093"
						android:background="@drawable/ellipse_2_shape" />

					<TextView
						android:id="@+id/start"
						android:layout_width="67dp"
						android:layout_height="37dp"
						android:layout_marginLeft="29dp"
						android:layout_marginTop="20dp"
						android:text="@string/start_string"
						android:textColor="@color/_bg__outcomming2_ek2_color"
						android:textSize="20sp"
						android:textStyle="bold|italic" />

				</RelativeLayout>

				<TextView
					android:id="@+id/or"
					android:layout_width="51dp"
					android:layout_height="37dp"
					android:layout_marginLeft="200dp"
					android:layout_marginTop="600dp"
					android:text="@string/or_string"
					android:textColor="@color/rectangle_1_color"
					android:textSize="20sp"
					android:textStyle="bold|italic" />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>